objects/Data_Qualified_Lead__c.object
<CustomObject>
    <description>Custom object store/track Energy Data Qualified Leads (DQL&apos;s)</description>
    <fields>
        <fullName>AFE_Date__c</fullName>
        <description>Date for Authorization for Expenditure</description>
        <inlineHelpText>Date for Authorization for Expenditure</inlineHelpText>
        <label>AFE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Action__c</fullName>
        <description>What action needs to be taken for approval?</description>
        <inlineHelpText>What action needs to be taken for approval?</inlineHelpText>
        <label>Approval Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are we approved/on Standards at Utility for current project products?</description>
        <inlineHelpText>Are we approved/on Standards at Utility for current project products?</inlineHelpText>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BID_DOC_Date__c</fullName>
        <description>Date for Sub Contractors to be awarded</description>
        <inlineHelpText>Date for Sub Contractors to be awarded</inlineHelpText>
        <label>BID DOC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booked_Value__c</fullName>
        <label>Booked Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Unit__c</fullName>
        <description>The power unit (kV, MW)</description>
        <inlineHelpText>The power unit (kV, MW)</inlineHelpText>
        <label>Capacity Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Value__c</fullName>
        <description>To determine the value of the capacity (50-MW)</description>
        <inlineHelpText>To determine the value of the capacity (50-MW)</inlineHelpText>
        <label>Capacity Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Cause of the outage (Snake, Bird, Heat,Weather,etc)</description>
        <inlineHelpText>Cause of the outage (Snake, Bird, Heat,Weather,etc)</inlineHelpText>
        <label>Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bird</fullName>
                </value>
                <value>
                    <fullName>Snake</fullName>
                </value>
                <value>
                    <fullName>Squirrel</fullName>
                </value>
                <value>
                    <fullName>Raccoon</fullName>
                </value>
                <value>
                    <fullName>Rats</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of the Project</description>
        <inlineHelpText>City of the Project</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date of completion of construction</description>
        <inlineHelpText>Date of completion of construction</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conductor_Cable_Characteristics__c</fullName>
        <label>Conductor/Cable Characteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <description>Price per customer</description>
        <inlineHelpText>Price per customer</inlineHelpText>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomName__c</fullName>
        <description>The DQL name</description>
        <inlineHelpText>The DQL name</inlineHelpText>
        <label>DQL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_NOT_UPDATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT UPDATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DQL_Score__c</fullName>
        <label>DQL Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQL_Source__c</fullName>
        <label>DQL Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cyber Squirrel</fullName>
                </value>
                <value>
                    <fullName>Inclement Weather</fullName>
                </value>
                <value>
                    <fullName>Approval Targets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DQL_Status__c</fullName>
        <label>DQL Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Raw Data</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Qualified__c</fullName>
        <label>Date Qualified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Initiated__c</fullName>
        <formula>NOW() - Initiated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Initiated</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Sales_Accecpted__c</fullName>
        <formula>NOW() -  Sales_Accepted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Sales Accecpted</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Additional details regarding the outage.</description>
        <inlineHelpText>Additional details regarding the outage.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <description>Developer Name</description>
        <inlineHelpText>Developer Name</inlineHelpText>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_State__c</fullName>
        <description>Developer State</description>
        <inlineHelpText>Developer State</inlineHelpText>
        <label>Developer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <description>Product Management suggested price</description>
        <inlineHelpText>Product Management suggested price</inlineHelpText>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete Product Offer</fullName>
                </value>
                <value>
                    <fullName>Lead Time</fullName>
                </value>
                <value>
                    <fullName>Missed Deadline (Quotation)</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>Project Complete</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPC_Subcontracting__c</fullName>
        <description>Will the EPC subcontract out the EC work</description>
        <inlineHelpText>Will the EPC subcontract out the EC work</inlineHelpText>
        <label>EPC Subcontracting?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effected__c</fullName>
        <description>Number of people effected by the outage</description>
        <inlineHelpText>Number of people effected by the outage</inlineHelpText>
        <label>Effected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company that recieves the materials</description>
        <inlineHelpText>Company that recieves the materials</inlineHelpText>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Qualified Leads (End User)</relationshipLabel>
        <relationshipName>End_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FEED_Stage_Details__c</fullName>
        <description>Is the project in the FEED stage? Who is performing the FEED (it also means that the project has not been approved ie. no permits, no budgetary funding)</description>
        <inlineHelpText>Is the project in the FEED stage? Who is performing the FEED (it also means that the project has not been approved ie. no permits, no budgetary funding)</inlineHelpText>
        <label>FEED Stage Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Link__c</fullName>
        <inlineHelpText>Link for PEC Report, Tableau workbook, article, etc.</inlineHelpText>
        <label>File Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>The Fiscal Year the target is set.</description>
        <inlineHelpText>The Fiscal Year the target is set.</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <description>Lowest price the part can be sold for</description>
        <inlineHelpText>Lowest price the part can be sold for</inlineHelpText>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GIS_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will there be any GIS equipment used?</description>
        <inlineHelpText>Will there be any GIS equipment used?</inlineHelpText>
        <label>GIS Equipment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPL_Code__c</fullName>
        <description>Global Product Line Code (750)</description>
        <inlineHelpText>Global Product Line Code (750)</inlineHelpText>
        <label>GPL Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Description__c</fullName>
        <description>Global Product Line Description (Cold Applied Medium Voltage Joints)</description>
        <inlineHelpText>Global Product Line Description (Cold Applied Medium Voltage Joints)</inlineHelpText>
        <label>GPL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated__c</fullName>
        <description>Date/Time status was set to Initiated</description>
        <label>Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kickoff_Date__c</fullName>
        <description>Date for construction kickoff</description>
        <inlineHelpText>Date for construction kickoff</inlineHelpText>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_User__c</fullName>
        <label>Last Modified by User</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <description>Date the project was last updated in the database</description>
        <inlineHelpText>Date the project was last updated in the database</inlineHelpText>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <description>Date the project went live on the database.</description>
        <inlineHelpText>Date the project went live on the database.</inlineHelpText>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the customer effected</description>
        <inlineHelpText>Location of the customer effected</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <inlineHelpText>Opportunity Market Segment - Substation, Wind, etc</inlineHelpText>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Chemical Processing</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Hydro</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Nuclear</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ports &amp; Waterways</fullName>
                </value>
                <value>
                    <fullName>Pulp, Paper &amp; Wood</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Substation</fullName>
                </value>
                <value>
                    <fullName>Transit/Rail</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <inlineHelpText>Opportunity Market -Industrial, Utility, etc</inlineHelpText>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Nuclear</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_DQL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master DQL</label>
        <referenceTo>Data_Qualified_Lead__c</referenceTo>
        <relationshipLabel>Master DQL Related List</relationshipLabel>
        <relationshipName>Data_Qualified_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <description>Part Description to identify the product within a GPL. (CST)</description>
        <inlineHelpText>Part Description to identify the product within a GPL. (CST)</inlineHelpText>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Disconnect_Switches__c</fullName>
        <label>Number of Disconnect Switches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_HV_Circuit_Breakers__c</fullName>
        <label>Number of HV Circuit Breakers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Insulators__c</fullName>
        <label>Number of Insulators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_MV_Circuit_Breakers__c</fullName>
        <label>Number of MV Circuit Breakers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Transformers__c</fullName>
        <label>Number of Transformers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Opportunity Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Equipment_Manufacturer__c</fullName>
        <description>Original Equipment Manufacturer</description>
        <inlineHelpText>Original Equipment Manufacturer</inlineHelpText>
        <label>Original Equipment Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName  &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__c</fullName>
        <description>Potential Available Market</description>
        <inlineHelpText>Potential Available Market</inlineHelpText>
        <label>PAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Qualified Leads (Parent Company)</relationshipLabel>
        <relationshipName>DQL_Parent_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Owner__c</fullName>
        <description>Parent owner of the project</description>
        <inlineHelpText>Parent owner of the project</inlineHelpText>
        <label>Parent Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>Part Number or RPN (12346-000)</description>
        <inlineHelpText>Part Number or RPN (12346-000)</inlineHelpText>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Details__c</fullName>
        <description>Has the DOE and FERC permits been approved? (you can normally look this up on the website)</description>
        <inlineHelpText>Has the DOE and FERC permits been approved? (you can normally look this up on the website)</inlineHelpText>
        <label>Permit Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <description>Plant Name</description>
        <inlineHelpText>Plant Name</inlineHelpText>
        <label>Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platts_Name__c</fullName>
        <label>Platts Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Type__c</fullName>
        <label>Power Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Activity__c</fullName>
        <description>Defines the current state of activity depending on timing</description>
        <inlineHelpText>Defines the current state of activity depending on timing</inlineHelpText>
        <label>Project Activity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Timing__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Market Analysis</fullName>
                </value>
                <value>
                    <fullName>Site Study</fullName>
                </value>
                <value>
                    <fullName>Project Scope</fullName>
                </value>
                <value>
                    <fullName>Economic Evaluation</fullName>
                </value>
                <value>
                    <fullName>Energy Analysis</fullName>
                </value>
                <value>
                    <fullName>Equipment Studies</fullName>
                </value>
                <value>
                    <fullName>Preliminary Design</fullName>
                </value>
                <value>
                    <fullName>Site Selection</fullName>
                </value>
                <value>
                    <fullName>Detailed Design</fullName>
                </value>
                <value>
                    <fullName>Technology Comparison</fullName>
                </value>
                <value>
                    <fullName>Fuel Strategy</fullName>
                </value>
                <value>
                    <fullName>Capital Estimating</fullName>
                </value>
                <value>
                    <fullName>Site Characterization</fullName>
                </value>
                <value>
                    <fullName>Dismantling</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Project Justification</fullName>
                </value>
                <value>
                    <fullName>AFE Submittal</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Owner Review of Issue</fullName>
                </value>
                <value>
                    <fullName>Capital Approval</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Preliminary Engineering</fullName>
                </value>
                <value>
                    <fullName>Definitive Estimating</fullName>
                </value>
                <value>
                    <fullName>Cost Analysis</fullName>
                </value>
                <value>
                    <fullName>Planning and Scheduling</fullName>
                </value>
                <value>
                    <fullName>Site Preparation</fullName>
                </value>
                <value>
                    <fullName>Safety Studies</fullName>
                </value>
                <value>
                    <fullName>Unit Simulation</fullName>
                </value>
                <value>
                    <fullName>Unit Strategies</fullName>
                </value>
                <value>
                    <fullName>Unit Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>Unique ID from external database</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID from external database</inlineHelpText>
        <label>Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_SIC_Code__c</fullName>
        <label>Project SIC Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Source__c</fullName>
        <description>The database of which the project is from</description>
        <inlineHelpText>The database of which the project is from</inlineHelpText>
        <label>Project Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IIR</fullName>
                </value>
                <value>
                    <fullName>C Three</fullName>
                </value>
                <value>
                    <fullName>GlobalData</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>To determine the current status of the project</description>
        <inlineHelpText>To determine the current status of the project</inlineHelpText>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete/Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Timing__c</fullName>
        <description>To determine the current timing of the project</description>
        <inlineHelpText>To determine the current timing of the project</inlineHelpText>
        <label>Project Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>The type of project (Grassroot)</description>
        <inlineHelpText>The type of project (Grassroot)</inlineHelpText>
        <label>Project Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>End User</inlineHelpText>
        <label>Prospect Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Qualified Leads</relationshipLabel>
        <relationshipName>Data_Qualified_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchasing_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company purchasing for the End User</description>
        <inlineHelpText>Company purchasing for the End User</inlineHelpText>
        <label>Purchasing Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Qualified Leads (Purchasing Company)</relationshipLabel>
        <relationshipName>Data_Qualified_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFQ_Date__c</fullName>
        <label>RFQ Date</label>
        <type>Date</type>
    </fields>
</CustomObject>